--- a/Frontend/src/app/pages/settings/users/user-management/user-management.html
+++ b/Frontend/src/app/pages/settings/users/user-management/user-management.html
@@ -7,6 +7,7 @@
       User Management
     </h1>
     <button
+      [routerLink]="'create'"
       class="mt-4 sm:mt-0 bg-blue-600 text-white px-4 py-2 rounded-lg shadow hover:bg-blue-700 transition flex items-center space-x-2"
     >
       <i class="fas fa-plus-circle"></i>
@@ -22,9 +23,30 @@
       class="w-full sm:w-1/2 border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
     />
   </div>
+  <div
+    *ngIf="successMessage"
+    class="flex items-center p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-100 border border-green-300 shadow-md"
+    role="alert"
+  >
+    <svg
+      class="flex-shrink-0 inline w-5 h-5 me-3 text-green-600"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.707a1 1 0 00-1.414-1.414L9 10.586 7.707 
+      9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 
+      0l4-4z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+    <span class="font-medium">{{ successMessage }}</span>
+  </div>
 
   <!-- User Table -->
-  <div class="overflow-x-auto bg-white shadow rounded-xl">
+  <div class="overflow-x-auto bg-white shadow rounded-xl mt-10">
     <table class="min-w-full divide-y divide-gray-200">
       <thead class="bg-gray-50">
         <tr>
@@ -36,7 +58,7 @@
           <th
             class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
           >
-            Name
+            Nama
           </th>
           <th
             class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
@@ -44,9 +66,9 @@
             Email
           </th>
           <th
-            class="px-2 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
+            class="px-2 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider"
           >
-            Actions
+            Aksi
           </th>
         </tr>
       </thead>
@@ -71,6 +93,7 @@
                 <span class="font-medium">Edit</span>
               </button>
               <button
+                (click)="openDeleteModal(user)"
                 class="flex items-center gap-2 px-3 py-1 rounded-lg bg-red-100 text-red-600 hover:bg-red-600 hover:text-white transition"
                 title="Delete"
               >
@@ -79,8 +102,6 @@
             </div>
           </td>
         </tr>
-
-        <!-- Jika tidak ada data -->
         <tr *ngIf="users.length === 0">
           <td colspan="4" class="px-6 py-4 text-center text-sm text-gray-500">
             No users found.
@@ -88,5 +109,34 @@
         </tr>
       </tbody>
     </table>
+  </div>
+</div>
+<!-- Modal Delete -->
+<div
+  *ngIf="showDeleteModal"
+  class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50"
+>
+  <div class="bg-white rounded-xl shadow-lg w-full max-w-md p-6">
+    <h2 class="text-lg font-semibold text-gray-800 mb-4">Konfirmasi Hapus</h2>
+    <p class="text-gray-600 mb-6">
+      Apakah Anda yakin ingin menghapus user
+      <span class="font-bold text-red-600">{{ selectedUser?.fullname }}</span
+      >?
+    </p>
+
+    <div class="flex justify-end gap-3">
+      <button
+        (click)="cancelDelete()"
+        class="px-4 py-2 rounded-lg bg-gray-200 text-gray-700 hover:bg-gray-300 transition"
+      >
+        Batal
+      </button>
+      <button
+        (click)="confirmDelete()"
+        class="px-4 py-2 rounded-lg bg-red-600 text-white hover:bg-red-700 transition"
+      >
+        Hapus
+      </button>
+    </div>
   </div>
 </div>
