--- a/Frontend/src/app/components/sidebarmenu/settings-link/settings-link.component.html
+++ b/Frontend/src/app/components/sidebarmenu/settings-link/settings-link.component.html
@@ -25,7 +25,7 @@
         />
       </svg>
     </div>
-    Settings
+    Pengaturan
     <div style="flex: 1"></div>
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -70,7 +70,7 @@
               />
             </svg>
           </div>
-          User
+          Pengguna & Akses
           <div style="flex: 1"></div>
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -116,7 +116,7 @@
                   />
                 </svg>
               </div>
-              User Management
+              Kelola Pengguna
               <span
                 class="bg-purple absolute h-5 -right-5 rounded-tl-lg rounded-bl-lg group-hover:opacity-100 transition-all pointer-events-none"
                 style="width: 5px"
