--- a/Frontend/src/app/pages/settings/users/user-management/create/create.html
+++ b/Frontend/src/app/pages/settings/users/user-management/create/create.html
@@ -15,7 +15,7 @@
         />
       </svg>
 
-      <h2 class="text-xl ml-2 font-extrabold text-gray-800">Create User</h2>
+      <h2 class="text-xl ml-2 font-extrabold text-gray-800">Tambah Pengguna</h2>
     </div>
 
     <!-- Form -->
@@ -23,7 +23,7 @@
       <!-- Fullname -->
       <div>
         <label class="block text-sm font-semibold text-gray-700 mb-1">
-          Fullname
+          Nama Lengkap
         </label>
         <div class="relative">
           <input
@@ -109,7 +109,7 @@
             d="M5 13l4 4L19 7"
           />
         </svg>
-        {{ isLoading ? "Processing..." : "Create User" }}
+        {{ isLoading ? "Processing..." : "Tambah Pengguna" }}
       </button>
     </form>
   </div>
