--- a/Frontend/src/app/components/sidebarmenu/settings-link/settings-link.component.html
+++ b/Frontend/src/app/components/sidebarmenu/settings-link/settings-link.component.html
@@ -27,19 +27,21 @@
     </div>
     Pengaturan
     <div style="flex: 1"></div>
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      fill="currentColor"
-      class="w-4 h-4 transition-transform duration-200"
-      [class.rotate-180]="showSettingsSubmenu"
-    >
-      <path
-        fill-rule="evenodd"
-        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
-        clip-rule="evenodd"
-      />
-    </svg>
+    <div class="ml-2">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+        class="w-4 h-4 transition-transform duration-200"
+        [class.rotate-180]="showSettingsSubmenu"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
+          clip-rule="evenodd"
+        />
+      </svg>
+    </div>
   </a>
 </li>
 
@@ -72,19 +74,21 @@
           </div>
           Pengguna & Akses
           <div style="flex: 1"></div>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="w-4 h-4 transition-transform duration-200"
-            [class.rotate-180]="showMasterDataSubMenu"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
-              clip-rule="evenodd"
-            />
-          </svg>
+          <div class="ml-2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="w-4 h-4 transition-transform duration-200"
+              [class.rotate-180]="showMasterDataSubMenu"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
         </a>
       </li>
     </ng-container>
