--- a/Frontend/src/app/app.html
+++ b/Frontend/src/app/app.html
@@ -100,6 +100,10 @@
                 </span>
               </a>
             </li>
+
+            <li>
+              <app-catering></app-catering>
+            </li>
             <li>
               <app-settings-link></app-settings-link>
             </li>
