--- a/Frontend/src/app/app.html
+++ b/Frontend/src/app/app.html
@@ -105,6 +105,9 @@
               <app-catering></app-catering>
             </li>
             <li>
+              <app-guests></app-guests>
+            </li>
+            <li>
               <app-settings-link></app-settings-link>
             </li>
           </ul>
