--- a/Frontend/src/app/components/sidebarmenu/guests/guests.html
+++ b/Frontend/src/app/components/sidebarmenu/guests/guests.html
@@ -48,17 +48,37 @@
   </a>
 </li>
 
-<!-- <div *ngIf="showSettingsSubmenu">
+<div *ngIf="showSettingsSubmenu">
   <ul class="relative pb-2.5 ml-4 space-y-1">
-    <li class="group relative pb-2.5 text-sm">
-      <a
-        class="cursor-pointer flex items-center text-purple hover:text-blue-900 rounded-lg p-2 transition-colors duration-200"
-        [routerLink]="'/ndas/job'"
-        [class.text-blue-900]="activeRoute.startsWith('/ndas/job')"
-        [class.font-semibold]="activeRoute.startsWith('/ndas/job')"
+    <ng-container>
+      <li
+        class="group relative pb-2.5 text-sm"
+        *ngIf="showSettingsSubmenu"
+        (click)="this.showMasterDataSubMenu = !this.showMasterDataSubMenu"
       >
-        Doc Audit
-      </a>
-    </li>
+        <a
+          [routerLink]="'gas/guest'"
+          class="flex items-center text-purple cursor-pointer hover:text-blue-900 rounded-lg p-2 transition-colors duration-200"
+        >
+          <div class="w-6 h-6 flex items-center justify-center mr-2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.058 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z"
+              />
+            </svg>
+          </div>
+          Daftar Tamu
+        </a>
+      </li>
+    </ng-container>
   </ul>
-</div> -->
+</div>
