--- a/Frontend/src/app/pages/Guest/guest/guest.html
+++ b/Frontend/src/app/pages/Guest/guest/guest.html
@@ -190,10 +190,7 @@
               <div class="flex justify-center gap-2">
                 <!-- Edit -->
                 <button
-                  [routerLink]="[
-                    '/gas/settings/users/user-management/edit',
-                    guest.id
-                  ]"
+                  [routerLink]="['/gas/guest/edit', guest.id]"
                   class="flex items-center gap-1 px-3 py-1 rounded-lg bg-indigo-50 text-indigo-600 hover:bg-indigo-600 hover:text-white transition"
                   title="Edit"
                 >
