add feat export csv guests

--- a/Frontend/src/app/pages/Guest/guest/guest.html
+++ b/Frontend/src/app/pages/Guest/guest/guest.html
@@ -42,7 +42,7 @@
   </div>
 
   <!-- Search Box -->
-  <div class="mb-4 flex flex-col sm:flex-row gap-4">
+  <div class="mb-4 flex flex-col sm:flex-row gap-4 mt-12">
     <input
       type="text"
       [(ngModel)]="searchTerm"
@@ -94,6 +94,44 @@
       (change)="onFilterChange()"
       class="border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
     />
+
+    <div>
+      <button
+        (click)="exportData()"
+        [disabled]="loading"
+        class="group relative mt-4 sm:mt-0 px-5 py-3 rounded-xl shadow-lg flex items-center space-x-3 font-semibold overflow-hidden text-white transition-all duration-300 bg-gradient-to-r from-green-600 to-green-600 hover:from-green-700 hover:to-green-700 disabled:opacity-60 disabled:cursor-not-allowed"
+      >
+        <ng-container *ngIf="!loading; else loadingTpl">
+          <span>Export</span>
+        </ng-container>
+
+        <ng-template #loadingTpl>
+          <div class="flex items-center space-x-2">
+            <svg
+              class="animate-spin h-5 w-5 text-white"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <circle
+                class="opacity-25"
+                cx="12"
+                cy="12"
+                r="10"
+                stroke="currentColor"
+                stroke-width="4"
+              ></circle>
+              <path
+                class="opacity-75"
+                fill="currentColor"
+                d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"
+              ></path>
+            </svg>
+            <span>Exporting...</span>
+          </div>
+        </ng-template>
+      </button>
+    </div>
   </div>
 
   <!-- Message -->
