--- a/Frontend/src/app/pages/Guest/guest/guest.html
+++ b/Frontend/src/app/pages/Guest/guest/guest.html
@@ -162,7 +162,7 @@
     <div class="overflow-x-auto">
       <table class="min-w-full text-sm text-left">
         <thead
-          class="bg-gradient-to-r from-gray-100 to-gray-200 text-gray-700 sticky top-0 z-10"
+          class="bg-gradient-to-r from-blue-800 to-blue-600 text-white sticky top-0 z-10"
         >
           <tr>
             <th class="px-6 py-3 font-semibold uppercase tracking-wider">
