--- a/Frontend/src/app/pages/catering/meal-ordering-system/meal-ordering-system.html
+++ b/Frontend/src/app/pages/catering/meal-ordering-system/meal-ordering-system.html
@@ -141,6 +141,7 @@
 
         <!-- Right Button -->
         <button
+          [routerLink]="'create'"
           class="px-4 py-2 text-white rounded-lg bg-blue-600 hover:bg-blue-700 transition-colors duration-200 font-medium shadow-sm flex items-center"
         >
           <svg
